[metadata]
name = jax
version = attr: jax.version.__version__
description = Differentiate, compile, and transform Numpy code.
author = JAX team
author_email = jax-dev@google.com
url = https://github.com/google/jax
license = Apache-2.0
classifiers =
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
  ml_dtypes>=0.0.3
  numpy>=1.21
  opt_einsum
  scipy>=1.7
packages = find:
python_requires = >= 3.8
zip_safe = False

[options.package_data]
jax = py.typed, *.pyi, **/*.pyi

[options.packages.find]
exclude = examples, jax/src/internal_test_util

[flake8]
max-line-length = 88
ignore =
  # object names too complex
  C901
  # four-space indents
  E111, E114
  # line continuations
  E121
  # line breaks around binary operators
  W503, W504
max-complexity = 18
select = B,C,F,W,T4,B9,E225,E227,E228
exclude =
  .git,
  build,
  __pycache__
per-file-ignores =
  # F811: redefinition of unused name
  docs/autodidax.py:F811
  # F401: unused imports
  # Note: we don't use jax/*.py because this matches contents of jax/_src
  __init__.py:F401
  jax/abstract_arrays.py:F401
  jax/ad_checkpoint.py:F401
  jax/api_util.py:F401
  jax/cloud_tpu_init.py:F401
  jax/core.py:F401
  jax/custom_batching.py:F401
  jax/custom_derivatives.py:F401
  jax/custom_transpose.py:F401
  jax/debug.py:F401
  jax/distributed.py:F401
  jax/dlpack.py:F401
  jax/dtypes.py:F401
  jax/errors.py:F401
  jax/flatten_util.py:F401
  jax/interpreters/ad.py:F401
  jax/interpreters/batching.py:F401
  jax/interpreters/mlir.py:F401
  jax/interpreters/partial_eval.py:F401
  jax/interpreters/pxla.py:F401
  jax/interpreters/xla.py:F401
  jax/linear_util.py:F401
  jax/monitoring.py:F401
  jax/prng.py:F401
  jax/profiler.py:F401
  jax/random.py:F401
  jax/sharding.py:F401
  jax/stages.py:F401
  jax/test_util.py:F401
  jax/tree_util.py:F401
  jax/typing.py:F401
  jax/util.py:F401
  jax/_src/api.py:F401
  jax/_src/numpy/lax_numpy.py:F401
  jax/_src/typing.py:F401
  jax/experimental/*.py:F401
  jax/lax/*.py:F401
  jax/nn/*.py:F401
  jax/numpy/*.py:F401
  jax/scipy/*.py:F401
