# Copyright 2023 The JAX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_visibility = ["//jax:internal"],
)

licenses(["notice"])

load("@cuda_cudart//:version.bzl", cuda_major_version = "VERSION")
load(
  "//jaxlib:jax.bzl",
  "if_cuda_is_configured",
  "if_rocm_is_configured",
  "py_library_providing_imports_info",
)

py_library_providing_imports_info(
    name = "jax_plugins",
)

py_library(
    name = "gpu_plugin_only_test_deps",
    deps = [
      ":jax_plugins",
      ] + if_cuda_is_configured([
        "//jax_plugins/cuda:cuda_plugin",
    ]) + if_rocm_is_configured([
        "//jax_plugins/rocm:rocm_plugin",
    ]),
)

filegroup(
    name = "cuda_umd_libs",
    srcs = if_cuda_is_configured([":cuda_umd_libs_zip"]),
)

genrule(
    name = "cuda_umd_libs_zip",
    srcs = [
        "@cuda_driver//:umd_libs",
    ],
    outs = ["cuda_umd_libs.zip"],
    cmd = """
      set -e
      set -x
      PKG_DIR="nvidia/%s/lib"
      mkdir -p $$PKG_DIR
      FILES_TO_ZIP=( $(SRCS) )
      for f in "$${FILES_TO_ZIP[@]}"; do
        cp "$$f" "$$PKG_DIR/"
      done
      $(location @bazel_tools//tools/zip:zipper) c $@ %s
    """ % (
        "cu13" if cuda_major_version == "13" else "cuda_driver",
        if_cuda_is_configured("$$PKG_DIR/*", "$$PKG_DIR"),
    ),
    message = "Zipping CUDA UMD libraries",
    tools = ["@bazel_tools//tools/zip:zipper"],
)
