[build-system]
# TODO(dsuo): Remove nanobind pin after
# https://github.com/wjacob/nanobind/pull/980 lands.
requires = ["scikit-build-core", "nanobind==2.5.0", "jax>=0.4.31"]
build-backend = "scikit_build_core.build"

[project]
name = "jax_ffi_example"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = ["jax"]

[project.optional-dependencies]
test = ["pytest", "absl-py"]
